# nulnet

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  installation.yml
.github/workflows/: ci.yml  release-nulnet.yml
scripts/: install.sh
src/: config.rs  main.rs  release.rs  storage.rs  telemetry.rs  transport.rs  update.rs
systemd/: nulnet.service
